# claude-statusline

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/hooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
claude_statusline/: __init__.py  __main__.py  bar.py  cli.py  colors.py  formatters.py  git.py  sessions.py  themes.py
docs/: RELEASE.md
scripts/: render_svg.py
tests/: test_all.py  test_ultra_effort.py  test_v070_nlines_and_thresholds.py
