[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-status"
version = "0.14.0"
description = "Beautiful, informative status line for Claude Code — zero dependencies, cross-platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Mallikarjuna"}
]
keywords = [
    "claude-code", "claude", "statusline", "status-bar", "statusbar",
    "claude-code-statusline", "cli", "terminal", "developer-tools",
    "anthropic", "claude-status", "prompt", "productivity", "ai-tools",
    "llm", "coding-assistant", "token-usage", "tokens",
    "context-window", "context-tracking", "budget-monitor",
    "cost-tracking", "burn-rate", "rate-limit", "session-monitor",
    "claude-code-plugin", "coding-agent", "agent-tooling", "agentic",
    "ai-agent", "subagent", "ai-coding", "llm-tooling",
    "ai-developer-tools", "prompt-engineering", "prompt-cache",
    "responsive-layout", "terminal-width", "git-status",
    "observability", "devtool", "context-usage", "usage-tracking",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
claude-status = "claude_statusline.cli:main"

[project.urls]
Homepage = "https://github.com/mkalkere/claude-statusline"
Repository = "https://github.com/mkalkere/claude-statusline"
Documentation = "https://github.com/mkalkere/claude-statusline#readme"
Issues = "https://github.com/mkalkere/claude-statusline/issues"
Changelog = "https://github.com/mkalkere/claude-statusline/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["claude_statusline*"]
